--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1747,6 +1747,10 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 }
 .page-publications #edit-exposed-widgets .chosen-container-multi .chosen-choices li.search-choice {
   margin-top: 0;
+  box-shadow: 0 0 0 white inset, 0 0 0 rgba(0, 0, 0, 0.05);
+  background: transparent;
+  border: 0;
+  padding: 2px 20px 0 0;
 }
 .page-publications .views-exposed-widgets > div:last-child {
   margin-right: 0;
@@ -1774,9 +1778,11 @@ header.navbar-default .navbar-collapse nav ul.menu li {
   font-size: 0.9rem;
   margin-left: 0em;
 }
-.page-publications .publications-right-column h2 {
+.page-publications .content-fluid .publications-right-column h2 {
   margin-top: 0;
   line-height: 23px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 .page-publications .content-publication-info {
   display: flex;
@@ -2052,7 +2058,7 @@ div.publications-detail-right-column > a.download {
 .page-events #content {
   width: 80.1%!important;
   border-top: 0px solid #003399;
-  margin-top: 3em;
+  margin-top: 2em;
   margin-left: 10px!important;
 }
 .content-fluid {
@@ -2190,7 +2196,7 @@ label.option {
   color: #58595f;
 }
 .search-new-design {
-  height: 35px;
+  height: 34px;
   border: 1px solid #003399;
   border-radius: 5px !important;
   background: url(../images/green-search.png) no-repeat 96% 55% #ffffff;
@@ -2201,7 +2207,7 @@ label.option {
   color: #003399;
 }
 .new-select-style {
-  height: 35px;
+  height: 100%;
   border: 1px solid #003399 !important;
   border-radius: 5px !important;
   background: url(../images/green-select.png) no-repeat scroll 94% center #ffffff !important;
@@ -2213,14 +2219,14 @@ label.option {
 .views-exposed-widgets .views-exposed-widget label {
   color: #003399 !important;
   font-family: "Open Sans" !important;
-  font-size: 0.9em !important;
-  font-weight: bold !important;
+  font-size: 1.2em !important;
+  font-weight: normal !important;
   padding-bottom: 0.1em;
 }
 .page-publications .sidebars_first,
 .page-events .sidebars_first {
   border-top: 0px solid #003399;
-  margin-top: 41px;
+  margin-top: 43px;
   margin-right: 0em;
 }
 .sidebars_first,
@@ -2260,6 +2266,10 @@ span.pages {
 }
 .content-fluid h2 {
   color: #003399;
+}
+.page-publications .content-fluid h2 {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
 /* Introductory page */
 .views-row {
@@ -2589,8 +2599,8 @@ span.pages {
 .page-search .views-row img {
   border: 0;
 }
-.page-search .region-sidebar-first .block.block-facetapi h2 {
-  padding-bottom: 0.5em;
+.page-search .search-sidebar-left {
+  padding-top: 11px;
 }
 .page-search .region-sidebar-first .block.block-facetapi h2:after {
   color: #c1e000;
@@ -2642,14 +2652,14 @@ span.pages {
 }
 .page-search .views-widget-sort-by > .form-item-sort-by > label {
   margin-top: 0;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
   font-style: normal;
 }
 .page-search #views-exposed-form-search-site .views-submit-button button {
   background: #003399 !important;
   height: 35px;
   padding: 0 1em;
-  margin-top: 25px;
+  margin-top: 30px;
   border-radius: 5px;
   margin-left: 5px;
 }
