--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -21743,7 +21743,7 @@ body.front .homepage-slider blockquote.image-field-caption p {
   }
   /* End Block: recommended-articles and recommended-resources and article aditional resources*/
   .results-for {
-    margin-left: 15px;
+    margin-left: 0;
   }
   /*Practical tools*/
   .page-practical-tools #edit-content {
