--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -305,9 +305,17 @@
 	}
 
 	/*Publications page*/
+	.content-fluid .container{
+	  	padding-left: 1em;
+	    padding-right: 1em
+	}
 
 	.new-select-style{
 		display: block !important;
+	}
+
+	.page-publications .sidebars_first.with-result-for, .page-publications .sidebars_first, .page-events .sidebars_first{
+		margin-top: 1em;
 	}
 
 	.page-publications{
