--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1888,7 +1888,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 
 .content-filters{
     float: left;
-    padding: 1em;
+    padding: 0em 0.5em 0 1em;
     border: 1px solid #003399;
     border-radius: 5px;
     margin-top: 26px;
@@ -2507,8 +2507,12 @@ label.option {
 
 .page-publications .sidebars_first, .page-events .sidebars_first {
     border-top: 0px solid #003399;
-    margin-top: 43px;
+    margin-top: 37px;
     margin-right: 0em;
+}
+
+.page-publications .sidebars_first.with-result-for{
+	margin-top: 63px;
 }
 
 
