--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-992.less
@@ -431,7 +431,7 @@ header{
 /* End Block: recommended-articles and recommended-resources and article aditional resources*/
 
 .results-for{
-	margin-left: 15px;
+	margin-left: 0;
 }
 /*Practical tools*/
 .page-practical-tools{
