--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1701,7 +1701,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 }
 .content-filters {
   float: left;
-  padding: 1em;
+  padding: 0em 0.5em 0 1em;
   border: 1px solid #003399;
   border-radius: 5px;
   margin-top: 26px;
@@ -2226,8 +2226,11 @@ label.option {
 .page-publications .sidebars_first,
 .page-events .sidebars_first {
   border-top: 0px solid #003399;
-  margin-top: 43px;
+  margin-top: 37px;
   margin-right: 0em;
+}
+.page-publications .sidebars_first.with-result-for {
+  margin-top: 63px;
 }
 .sidebars_first,
 .publications-sidebar-first {
@@ -3302,8 +3305,17 @@ div.workbench-info-block {
     width: 48.7%;
   }
   /*Publications page*/
+  .content-fluid .container {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
   .new-select-style {
     display: block !important;
+  }
+  .page-publications .sidebars_first.with-result-for,
+  .page-publications .sidebars_first,
+  .page-events .sidebars_first {
+    margin-top: 1em;
   }
   .page-publications .content {
     display: block;
