--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2506,9 +2506,13 @@ label.option {
 }
 
 .page-publications .sidebars_first, .page-events .sidebars_first {
-    border-top: 0px solid #003399;
+    border-top: 0;
     margin-top: 37px;
     margin-right: 0em;
+}
+
+.no-results .content-filters{
+	border: 0;
 }
 
 .page-publications .sidebars_first.with-result-for{
@@ -3020,4 +3024,10 @@ div.workbench-info-block{
 	position: absolute;
 	top: 25px;
 	right: 0;
+}
+
+/* Previous Campaigns */
+
+#block-hwc-homepage-previous-campaign-nav{
+	clear: both;
 }
