--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1494,6 +1494,13 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	width: 100%;
 }
 
+
+aside.col-md-3{
+	.region.region-sidebar-first.well{
+		padding: 0;
+	}
+}
+
 .left-menu ul{
 	list-style: none;
 	li{
@@ -1556,6 +1563,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		ul{
 			li{
 				background-color: transparent;
+				padding: 0.5em 0;
 				.nolink{
 					border: 2px solid;
 					padding: 10px 15px;
@@ -2519,6 +2527,13 @@ label.option {
 	margin-top: 63px;
 }
 
+.no-results .sidebars_first.with-result-for{
+	display: none;
+}
+
+.no-results .two_column{
+	padding-top: 2em;
+}
 
 .sidebars_first, .publications-sidebar-first {
     border-top: 5px solid #003399;
