HW20-53 - HWC20 Graphical design (sprint 2)

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -224,6 +224,10 @@
 	    pointer-events: none;
 	}
 
+	.related-resources-boxes div{
+		width: 100%;
+	}
+
 	/*Home*/
 	.priority-area-box {
 	    width: 100%;
