--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -103,7 +103,7 @@
  
 	/*Introductory page article*/
 	.related-resources{
-		margin-top: 2em;
+		margin-top: 0;
 		padding-bottom: 1em;
 	}
 
@@ -117,24 +117,24 @@
 
 	.related-resources-boxes{
 		flex-direction: row;
-		margin-top: 1em;
+		padding-bottom: 1em;
 		div{
 			width: 30%;
 		}
 	}
 
+	.container-recommended-tools{
+		justify-content: flex-start;
+	}
+
 	.recommended-tool{
-		width: 30%;
+		width: 100%;
 	    margin: 0;
 	    min-width: auto;
-	    padding-top: 4em;
 	    padding-left: 0;
 	    padding-right: 0;
 	    justify-content: center;
 	    text-align: center;
-	    background-position-x: 50% !important;
-   		background-position-y: 10% !important;
-   		min-height: 121px;
 	}
 
 	.recommended-tool a {
