--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1344,107 +1344,6 @@ aside.col-md-3 .region.region-sidebar-first.well {
   right: 0;
   top: 10%;
 }
-.accordion-menu {
-  max-width: 265px;
-  float: right;
-  padding-right: 1em;
-}
-.accordion-menu ul .active {
-  background: transparent;
-}
-.accordion-menu ul .active a:before {
-  content: initial;
-}
-.accordion-menu .left-menu ul li:hover {
-  background-color: transparent;
-}
-.accordion-menu .menu-level-2 ul li {
-  background-color: transparent;
-  padding: 0.5em 0;
-}
-.accordion-menu .menu-level-2 ul li .nolink {
-  border: 2px solid;
-  padding: 10px 15px;
-  display: block;
-  margin-bottom: 15px;
-  border-radius: 3px;
-  text-decoration: none;
-  cursor: pointer;
-  color: white;
-  font-weight: bold;
-  background-color: #0030a0;
-  border-radius: 25px;
-  padding: 0.5em 0.5em;
-  margin-bottom: 0.5em;
-  padding-left: 1em;
-  padding-right: 30px;
-  position: relative;
-}
-.accordion-menu .menu-level-2 ul li .nolink:after {
-  content: "\e250";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #FFF;
-  position: absolute;
-  right: 10px;
-  top: 35%;
-}
-.accordion-menu .menu-level-2 ul li .active-trail.nolink:after {
-  content: "\e252";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #bcd75b;
-}
-.accordion-menu .menu-level-2 ul li .up-arrow:after {
-  content: "\e252";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #bcd75b;
-}
-.accordion-menu .menu-level-2 ul li .active-trail.nolink.closed-down-arrow:after {
-  content: "\e250";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #FFF;
-}
-.accordion-menu .menu-level-2 ul li ul {
-  background: transparent;
-  padding-left: 2em;
-}
-.accordion-menu .menu-level-2 ul li ul li {
-  background-color: #ecf4cb;
-  padding: 0.5em 0.5em;
-}
-.accordion-menu .menu-level-2 ul li ul li a {
-  background: transparent;
-  border: 0;
-  color: #0030a0;
-  padding: 0 1em;
-  margin-bottom: 0;
-  font-weight: normal;
-}
-.accordion-menu .menu-level-2 ul li ul li.active {
-  background-color: #daea96;
-}
-.accordion-menu .menu-level-2 ul li ul li.active a {
-  font-weight: bold;
-}
-.accordion-menu .menu-level-2 ul li ul li:hover {
-  background-color: #daea96;
-}
-.accordion-menu .menu-level-2 ul li ul li:hover a {
-  font-weight: bold;
-}
-.left-menu.accordion-menu ul.menu > li.expanded ul.menu {
-  display: none;
-}
-.left-menu.accordion-menu ul.menu > li.expanded.active ul.menu {
-  display: block;
-}
 .main-container div.contextual-links-wrapper {
   left: 5px;
   right: auto;
@@ -2640,6 +2539,110 @@ div.workbench-info-block {
   right: 0;
 }
 /* Previous Campaigns */
+.accordion-menu {
+  max-width: 265px;
+  float: right;
+  padding-right: 1em;
+}
+.accordion-menu ul .active {
+  background: transparent;
+}
+.accordion-menu ul .active a:before {
+  content: initial;
+}
+.accordion-menu .left-menu ul li:hover {
+  background-color: transparent;
+}
+.accordion-menu .menu-level-2 ul li {
+  background-color: transparent;
+  padding: 0;
+  margin-bottom: 0.5em;
+}
+.accordion-menu .menu-level-2 ul li .nolink {
+  border: 2px solid;
+  padding: 10px 15px;
+  display: block;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  background-color: #0030a0;
+  border-radius: 25px;
+  padding: 0.5em 0.5em;
+  margin-bottom: 0.5em;
+  padding-left: 1em;
+  padding-right: 30px;
+  position: relative;
+}
+.accordion-menu .menu-level-2 ul li .nolink:after {
+  content: "\e250";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #FFF;
+  position: absolute;
+  right: 10px;
+  top: 7px;
+}
+.accordion-menu .menu-level-2 ul li .active-trail.nolink:after {
+  content: "\e252";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #bcd75b;
+}
+.accordion-menu .menu-level-2 ul li .up-arrow:after {
+  content: "\e252";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #bcd75b;
+}
+.accordion-menu .menu-level-2 ul li .active-trail.nolink.closed-down-arrow:after {
+  content: "\e250";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #FFF;
+}
+.accordion-menu .menu-level-2 ul li ul {
+  background: transparent;
+  padding-left: 2em;
+}
+.accordion-menu .menu-level-2 ul li ul li {
+  background-color: #ecf4cb;
+  padding: 0.5em 0.5em;
+  margin-top: 4px;
+  margin-bottom: 13px;
+}
+.accordion-menu .menu-level-2 ul li ul li a {
+  background: transparent;
+  border: 0;
+  color: #0030a0;
+  padding: 0 1em;
+  margin-bottom: 0;
+  font-weight: normal;
+}
+.accordion-menu .menu-level-2 ul li ul li.active {
+  background-color: #daea96;
+}
+.accordion-menu .menu-level-2 ul li ul li.active a {
+  font-weight: bold;
+}
+.accordion-menu .menu-level-2 ul li ul li:hover {
+  background-color: #daea96;
+}
+.accordion-menu .menu-level-2 ul li ul li:hover a {
+  font-weight: bold;
+}
+.left-menu.accordion-menu ul.menu > li.expanded ul.menu {
+  display: none;
+}
+.left-menu.accordion-menu ul.menu > li.expanded.active ul.menu {
+  display: block;
+}
 #block-hwc-homepage-previous-campaign-nav {
   clear: both;
 }
