--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3051,3 +3051,38 @@ div.workbench-info-block{
 		}
 	}
 }
+
+#block-hwc-campaign-resources{
+
+	.campaign-resources-title{
+		background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
+		width: 100%;
+		display: block;
+		padding-bottom: 0em;
+		margin-bottom: 1em;
+		margin-top: 2em;
+		span{
+			color: #003399;
+			font-size: 1.4em;
+    		font-weight: 500;
+			padding-top: 1em;
+			background: #FFF;
+			padding-right: 0.7em;
+    	}
+	}
+
+	.campaign-resources{
+		.campaign-resources-boxes{
+			display: flex;
+		    flex-wrap: wrap;
+		    width: 100%;
+		    justify-content: space-between;
+			div {
+				display: flex;
+				width: 49%;
+				margin-bottom: 1em;
+			}
+		}
+	}
+	
+}
